[metadata]
name = dreamcenter
version = 1.0
description = Top down shooter roguelike
long_description = A longer description
license = Your license here
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    click==8.*
    pygame==2.*
    pathfinding==1.*
    structlog

[options.package_data]
dreamcenter.assets.gfx = *.png
dreamcenter.assets.audio = *.wav, *.ogg
dreamcenter.assets.levels = *.json

[options.entry_points]
# make sure you have a function called
# main() in tower.main!
console_scripts =
    dreamcenter = dreamcenter.main:main